@startuml Design Class Diagram for models

namespace Rally.Models {
    class User {
        + Tracks: ICollection<Track>
    }

    class Track {
        + Id: int
        + Name: string
        + Comment: string
        + Location: string
        + Date: DateTime
        + User: User
        + Category: Category
        + Signs: ICollection<Sign>
    }

    class Sign {
        + Id: int
        + SignNumber: int
        + Location: string
        + Rotation: string
        + Exercise: Exercise
        + Track: Track
    }

    class Exercise {
        [DatabaseGenerated(DatabaseGeneratedOption.None)]
        + Id: int
        + SignNumber: int
        + Description: string
        + Image: string
        + Equipment: Equipment
        + Category: ICollection<Category>
    }

    class Equipment {
        [DatabaseGenerated(DatabaseGeneratedOption.None)]
        + Id: int
        + Image: string
        + Exercises: ICollection<Exercise>
    }

    class Category {
        [DatabaseGenerated(DatabaseGeneratedOption.None)]
        + Id: int
        + Type: CategoryType
        + Rules: string
        + Tracks: ICollection<Track>
        + Exercises: ICollection<Exercise>
    }

    User "1" -- "0..*" Track
    Track "0..*" -- "1" Category
    Track "1" -- "0..*" Sign
    Sign "0..*" -- "1" Exercise
    Exercise "0..*" -- "1" Equipment
    Category "0..*" -- "0..*" Exercise

}



@enduml
